--- a/style/style.css
+++ b/style/style.css
@@ -174,3 +174,49 @@ padding-bottom: 80px;
 text-align: center;
 
 }
+.banner-podcast{
+  
+    width: 1200px;
+    height: 222px;
+    padding-top: 50px;
+    margin-bottom: 80px;
+}
+.banner-podcast h2{
+    font-size: 3rem;
+    color: white;
+    margin-bottom: 16px;
+
+}
+.banner-podcast p{
+    font-size: 1rem;
+    color: white;
+    
+    
+}
+
+.banner-card{
+    padding-top: 80px;
+    display: flex;
+ border-top: 1px solid #ffff;
+   color: wheat;
+   max-width: 1200px;
+   
+    height: 94px;
+   
+    padding-bottom: 120px;
+}
+.banner-card h2{
+    color: #00ff88;
+     font-size: 3rem;
+}
+.banner-card p{
+    color:white;
+     font-size: 1rem;
+}
+.bcard1{
+ border: 2px solid rgb(19, 13, 15);
+ width: 240x;
+ height: 94px;
+
+    
+}
