--- a/style/style.css
+++ b/style/style.css
@@ -220,3 +220,56 @@ text-align: center;
 
     
 }
+.content-tech h2{
+    text-align: center;
+    padding-top: 120px;
+    padding-bottom: 40px;
+    font-size: 3rem;
+    color: white;
+    
+}
+.content-tech{
+     
+    background-color: #230E3D;
+   
+    
+}
+.content-techwave{          
+          display: flex;
+          max-width: 1200px;
+          gap: 30px;
+     }
+
+ .escla{
+         display: flex;
+          max-width: 1200px;
+           margin-top: 30px;
+           padding-bottom: 120px;
+     }
+.content-premium{
+   
+  align-content: center;
+  border-radius: 15px;
+    border: 2px solid rgb(19, 13, 15);
+    height: 480px ;
+    width: 380px;
+       background-color: #351165;
+          padding-left: 40px;
+            border-radius: 10px;
+            color: white
+            
+}
+.content-premium h3{
+ font-size:  2rem;
+ padding-top: 16px;
+ }
+ .content-premium p{
+font-size: 1rem;
+line-height: 24px;
+padding-top: 16px;
+ }
+ .content-premium img{
+    width: 60px;
+    height: 60px;
+ }
+
