--- a/style/style.css
+++ b/style/style.css
@@ -273,3 +273,97 @@ padding-top: 16px;
     height: 60px;
  }
 
+
+.content-mobile{
+    
+   align-content: center;
+  border-radius: 15px;
+        padding-left: 40px;
+    margin-bottom: 30px;
+    height: 225px ;
+    width: 790px;
+        background-color: #351165;
+           
+            border-radius: 10px;
+            color: white
+}
+.content-global{
+    
+    align-content: center;
+  border-radius: 15px;
+    padding-left: 40px;
+    
+    height: 225px ;
+    width: 790px;
+          background-color: #351165;
+      
+            border-radius: 10px;
+            color: white 
+}
+.content-esclusive{
+    
+  align-content: center;
+  border-radius: 15px;
+    border: 2px solid rgb(19, 13, 15);
+    height: 273px ;
+    width: 790px;
+         background-color: #351165;
+           padding-left: 40px;
+            border-radius: 10px;
+            color: white;
+            margin-right: 30px;
+            
+            
+}
+.content-rich{
+   
+   align-content: center;
+  border-radius: 15px;
+    border: 2px solid rgb(19, 13, 15);
+    height: 273px ;
+    width: 380px;
+          background-color: #351165;
+          padding-left: 40px;
+            border-radius: 10px;
+            color: white
+}
+
+
+.feature-content{
+     padding-top: 120px;
+     background-color: #1A0B2E;
+   padding-bottom: 120px;
+
+}
+
+.featured-section{
+   padding-top: 40px;
+    display: flex;
+    max-width: 1200px;
+    gap: 30px;;
+ 
+}
+.featured-future{
+      
+  border-radius: 15px;
+    border: 2px solid rgb(19, 13, 15);
+    height: 440px ;
+    width: 380px;
+          background-color: #351165;
+         
+            border-radius: 10px;
+        
+
+}
+.featured-title{
+    padding-left: 40px;
+    color: wheat;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    
+
+}
+.featured-title p{
+    line-height: 24px;
+    font-size: 1rem;
+}
